# autonomous-flight-assistant

./: .gitignore  readme.md
dji_sdk/launch/: sdk.launch
docs/: call_stack_flight_demo.drawio  drone_ctrl_modules.drawio  drone_simulation_ideen.xml  package_requirements.txt
drone_ctrl/: CMakeLists.txt  README.md  package.xml  rviz_pointcloud.rviz
drone_ctrl/include/: DialogKeyboard.h  dji_sdk_enums.h  drone_object_ros.h
drone_ctrl/launch/: drone_pf.launch  drone_pf_rviz.launch
drone_ctrl/src/: DialogKeyboard.cpp  drone_Pathfinder.cpp  drone_auto.cpp  drone_keyboard.cpp  drone_object_ros.cpp  fixed_flight_demo.cpp  qnode.cpp  qnode.h  qt_ros_test.cpp  qt_ros_test.h  qt_ros_test.ui  viewer.cpp  viewer_pc.cpp
drone_ctrl/src/modules/: CollisionDetection.cpp  CollisionDetection.h  abstract_module.cpp  abstract_module.h  direction_decision.cpp  direction_decision.h  drone_decision.cpp  drone_decision.h  environment_processing.cpp  environment_processing.h  img_process.cpp  img_process.h  pointcloud_processing.cpp  pointcloud_processing.h
drone_ctrl/src/modules/keyboard_rc/: keyboard_rc.cpp  keyboard_rc_gui.cpp  keyboard_rc_gui.h  keyboard_rc_gui.qrc  keyboard_rc_gui.ui
drone_sim/: CMakeLists.txt  package.xml  rqt_color_depth.perspective  rviz_pointcloud.rviz
drone_sim/include/: plugin_drone.h  plugin_ros_imu_native.h
drone_sim/launch/: l_profile.launch  simple.launch  simple_teleop.launch  wood_clearing_teleop.launch
drone_sim/models/: database.config
drone_sim/models/3pylons/: model.config  model.sdf
drone_sim/models/grass_ground_plane/: model.config  model.sdf
drone_sim/models/grass_ground_plane/materials/scripts/: grass_ground_plane.material
drone_sim/models/overheadpylon/: model.config  model.sdf
drone_sim/models/overheadpylon/meshes/: overheadpylon.dae
drone_sim/models/pine_tree_big/: model.sdf
drone_sim/models/pine_tree_small/: model.sdf
drone_sim/models/prognodrone/: m600.dae  model.config  prognodrone.sdf
drone_sim/src/: plugin_drone.cpp
drone_sim/worlds/: flatgrass_pylon.world  flatgrass_pylon_l_profile.world  wood_bigTree.world  wood_clearing_3_pylons.world  wood_test.world
